--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "react-scripts test",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "now ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,3 +36,5 @@
     "react-test-renderer": "^16.11.0"
   }
 }
+
+
