--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "now ./build"
+    "deploy": "now --prod ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
